Rate-limit all non-admin unsafe API requests
