# api.go
@@ -110,34 +110,45 @@ func IsDeprecatedAPIPath(path_ string) mo.Option[int] {
 	return mo.None[int]()
 }
 
-func (app *App) withAPIToken(f func(c echo.Context, user *User) error) func(c echo.Context) error {
+func (app *App) APIRequestToMaybeUser(c echo.Context) (mo.Option[User], error) {
+	authorizationHeader := c.Request().Header.Get("Authorization")
+	if authorizationHeader == "" {
+		return mo.None[User](), nil
+	}
+
 	bearerExp := regexp.MustCompile("^Bearer (.*)$")
 
+	tokenMatch := bearerExp.FindStringSubmatch(authorizationHeader)
+	if tokenMatch == nil || len(tokenMatch) < 2 {
+		return mo.None[User](), NewUserError(http.StatusUnauthorized, "Malformed Authorization header")
+	}
+	token := tokenMatch[1]
+
+	var user User
+	if err := app.DB.First(&user, "api_token = ?", token).Error; err != nil {
+		if errors.Is(err, gorm.ErrRecordNotFound) {
+			return mo.None[User](), NewUserError(http.StatusUnauthorized, "Unknown API token")
+		}
+		return mo.None[User](), err
+	}
+
+	if user.IsLocked {
+		return mo.None[User](), NewUserError(http.StatusForbidden, "Account is locked")
+	}
+
+	return mo.Some(user), nil
+}
+
+func (app *App) withAPIToken(requireLogin bool, f func(c echo.Context, user *User) error) func(c echo.Context) error {
 	return func(c echo.Context) error {
-		authorizationHeader := c.Request().Header.Get("Authorization")
-		if authorizationHeader == "" {
-			return echo.NewHTTPError(http.StatusUnauthorized, "Missing 'Bearer: abcdef' Authorization header")
-		}
-
-		tokenMatch := bearerExp.FindStringSubmatch(authorizationHeader)
-		if tokenMatch == nil || len(tokenMatch) < 2 {
-			return echo.NewHTTPError(http.StatusUnauthorized, "Malformed Authorization header")
-		}
-		token := tokenMatch[1]
-
-		var user User
-		if err := app.DB.First(&user, "api_token = ?", token).Error; err != nil {
-			if errors.Is(err, gorm.ErrRecordNotFound) {
-				return echo.NewHTTPError(http.StatusUnauthorized, "Unknown API token")
-			}
+		maybeUser, err := app.APIRequestToMaybeUser(c)
+		if err != nil {
 			return err
 		}
-
-		if user.IsLocked {
-			return echo.NewHTTPError(http.StatusForbidden, "Account is locked")
+		if maybeUser.IsAbsent() && requireLogin {
+			return NewUserError(http.StatusUnauthorized, "Route requires authorization. Missing 'Bearer: abcdef' Authorization header")
 		}
-
-		return f(c, &user)
+		return f(c, maybeUser.ToPointer())
 	}
 }
 
@@ -145,7 +156,7 @@ func (app *App) withAPITokenAdmin(f func(c echo.Context, user *User) error) func
 	notAnAdminBlob := Unwrap(json.Marshal(map[string]string{
 		"error": "You are not an admin.",
 	}))
-	return app.withAPIToken(func(c echo.Context, user *User) error {
+	return app.withAPIToken(true, func(c echo.Context, user *User) error {
 		if !user.IsAdmin {
 			return c.JSONBlob(http.StatusForbidden, notAnAdminBlob)
 		}
@@ -281,10 +292,11 @@ func (app *App) APIGetUsers() func(c echo.Context) error {
 //	@Produce		json
 //	@Success		200	{object}	APIUser
 //	@Failure		403	{object}	APIError
+//	@Failure		429	{object}	APIError
 //	@Failure		500	{object}	APIError
 //	@Router			/drasl/api/v2/user [get]
 func (app *App) APIGetSelf() func(c echo.Context) error {
-	return app.withAPIToken(func(c echo.Context, user *User) error {
+	return app.withAPIToken(true, func(c echo.Context, user *User) error {
 		apiUser, err := app.userToAPIUser(user)
 		if err != nil {
 			return err
@@ -369,10 +381,11 @@ type APICreateUserResponse struct {
 //	@Failure		400						{object}	APIError
 //	@Failure		401						{object}	APIError
 //	@Failure		403						{object}	APIError
+//	@Failure		429						{object}	APIError
 //	@Failure		500						{object}	APIError
 //	@Router			/drasl/api/v2/users [post]
 func (app *App) APICreateUser() func(c echo.Context) error {
-	return app.withAPITokenAdmin(func(c echo.Context, caller *User) error {
+	return app.withAPIToken(false, func(c echo.Context, caller *User) error {
 		req := new(APICreateUserRequest)
 		if err := c.Bind(req); err != nil {
 			return err
@@ -410,7 +423,6 @@ func (app *App) APICreateUser() func(c echo.Context) error {
 			capeReader,
 			req.CapeURL,
 		)
-
 		if err != nil {
 			return err
 		}
@@ -508,10 +520,11 @@ func (app *App) APIUpdateUser() func(c echo.Context) error {
 //	@Failure		400						{object}	APIError
 //	@Failure		403						{object}	APIError
 //	@Failure		404						{object}	APIError
+//	@Failure		429						{object}	APIError
 //	@Failure		500						{object}	APIError
 //	@Router			/drasl/api/v2/user [patch]
 func (app *App) APIUpdateSelf() func(c echo.Context) error {
-	return app.withAPIToken(func(c echo.Context, user *User) error {
+	return app.withAPIToken(true, func(c echo.Context, user *User) error {
 		req := new(APIUpdateUserRequest)
 		if err := c.Bind(req); err != nil {
 			return err
@@ -585,10 +598,11 @@ func (app *App) APIDeleteUser() func(c echo.Context) error {
 //	@Produce		json
 //	@Success		204
 //	@Failure		401	{object}	APIError
+//	@Failure		429	{object}	APIError
 //	@Failure		500	{object}	APIError
 //	@Router			/drasl/api/v2/user [delete]
 func (app *App) APIDeleteSelf() func(c echo.Context) error {
-	return app.withAPIToken(func(c echo.Context, user *User) error {
+	return app.withAPIToken(true, func(c echo.Context, user *User) error {
 		err := app.DeleteUser(user, user)
 		if err != nil {
 			return err
@@ -614,7 +628,7 @@ func (app *App) APIDeleteSelf() func(c echo.Context) error {
 //	@Failure		500		{object}	APIError
 //	@Router			/drasl/api/v2/players/{uuid} [get]
 func (app *App) APIGetPlayer() func(c echo.Context) error {
-	return app.withAPIToken(func(c echo.Context, user *User) error {
+	return app.withAPIToken(true, func(c echo.Context, user *User) error {
 		uuid_ := c.Param("uuid")
 		_, err := uuid.Parse(uuid_)
 		if err != nil {
@@ -703,7 +717,7 @@ type APICreatePlayerRequest struct {
 //	@Failure		500						{object}	APIError
 //	@Router			/drasl/api/v2/players [post]
 func (app *App) APICreatePlayer() func(c echo.Context) error {
-	return app.withAPIToken(func(c echo.Context, caller *User) error {
+	return app.withAPIToken(true, func(c echo.Context, caller *User) error {
 		req := new(APICreatePlayerRequest)
 		if err := c.Bind(req); err != nil {
 			return err
@@ -778,10 +792,11 @@ type APIUpdatePlayerRequest struct {
 //	@Failure		400						{object}	APIError
 //	@Failure		403						{object}	APIError
 //	@Failure		404						{object}	APIError
+//	@Failure		429						{object}	APIError
 //	@Failure		500						{object}	APIError
 //	@Router			/drasl/api/v2/players/{uuid} [patch]
 func (app *App) APIUpdatePlayer() func(c echo.Context) error {
-	return app.withAPIToken(func(c echo.Context, caller *User) error {
+	return app.withAPIToken(true, func(c echo.Context, caller *User) error {
 		req := new(APIUpdatePlayerRequest)
 		if err := c.Bind(req); err != nil {
 			return err
@@ -852,7 +867,7 @@ func (app *App) APIUpdatePlayer() func(c echo.Context) error {
 //	@Failure		500	{object}	APIError
 //	@Router			/drasl/api/v2/players/{uuid} [delete]
 func (app *App) APIDeletePlayer() func(c echo.Context) error {
-	return app.withAPIToken(func(c echo.Context, user *User) error {
+	return app.withAPIToken(true, func(c echo.Context, user *User) error {
 		uuid_ := c.Param("uuid")
 		_, err := uuid.Parse(uuid_)
 		if err != nil {
@@ -978,7 +993,7 @@ type APIChallenge struct {
 //	@Failure		500	{object}	APIError
 //	@Router			/drasl/api/v2/challenge-skin [get]
 func (app *App) APIGetChallengeSkin() func(c echo.Context) error {
-	return app.withAPIToken(func(c echo.Context, _ *User) error {
+	return app.withAPIToken(false, func(c echo.Context, _ *User) error {
 		username := c.QueryParam("username")
 
 		challengeToken, err := MakeChallengeToken()
@@ -1024,7 +1039,7 @@ type APILoginRequest struct {
 //	@Failure		500	{object}	APIError
 //	@Router			/drasl/api/v2/login [post]
 func (app *App) APILogin() func(c echo.Context) error {
-	return func(c echo.Context) error {
+	return app.withAPIToken(false, func(c echo.Context, _ *User) error {
 		var req APILoginRequest
 		err := c.Bind(&req)
 		if err != nil {
@@ -1042,5 +1057,5 @@ func (app *App) APILogin() func(c echo.Context) error {
 		}
 
 		return c.JSON(http.StatusOK, APILoginResponse{User: apiUser, APIToken: user.APIToken})
-	}
+	})
 }
